Added currency conversions

--- a/src/components/CashAccounts.css
+++ b/src/components/CashAccounts.css
@@ -31,3 +31,9 @@
   margin-top: 2px;
   font-size: 0.8rem;
 }
+
+.calculatedBalanceValue {
+  font-weight: unset;
+  margin-top: 2px;
+  font-size: 0.8rem;
+}
