updated asset editing pages and fixed bugs

--- a/src/components/Properties.css
+++ b/src/components/Properties.css
@@ -1,6 +1,9 @@
-.calculatedBalanceValue {
+.calculatedBalanceValueRow {
   font-weight: bolder;
   margin: 2px 4px 0px 0px;
+}
+.calculatedBalanceValueRow > td {
+  padding-bottom: 5px;
 }
 
 .underNetTexts {
@@ -32,21 +35,12 @@
   font-size: 0.8rem;
 }
 
-.loanValueBaseCurrency {
-  font-weight: unset;
-  margin-top: 2px;
-  font-size: 0.8rem;
-}
-.netValueBaseCurrency {
-  font-weight: unset;
-  margin-top: 2px;
-  font-size: 0.8rem;
-}
-
-.currentValueText {
-  margin: 2px 4px 0px 0px;
-}
-
-.PropertyCardRow {
+.PropertyLeftBox {
   cursor: pointer;
+}
+
+.valuesTable {
+  font-weight: unset;
+  margin-top: 2px;
+  font-size: 0.8rem;
 }
