--- a/src/components/PropertiesUpdateVal.css
+++ b/src/components/PropertiesUpdateVal.css
@@ -6,13 +6,20 @@
   border-radius: 7px;
   border-width: thin;
   border-color: rgb(75, 166, 246);
-  margin: 0px 0px 0px 5px;
+  margin: 0px 0px 0px 0px;
 }
 
 .editPropertyForm {
   display: flex;
   flex-direction: column;
   margin: 5px 0px 0px 0px;
+  width: 100%;
+  margin: 0px 10px 0px 0px;
+}
+
+.propertyValUpdateName {
+  font-weight: bolder;
+  margin: 10px 0px 0px 10px;
 }
 
 .newPropertyValueInputRow {
