--- a/src/parentstyles.css
+++ b/src/parentstyles.css
@@ -32,14 +32,23 @@ code {
   border-spacing: 0;
   border-collapse: separate;
   border-radius: 10px;
-  border: 1px solid black;
+  border: 1px solid rgb(255, 255, 255);
+}
+
+.tableRoundedCorner thead {
+  color: white;
+  background-color: #087fed;
 }
 
 /* Apply a border to the right of all but the last column */
 .tableRoundedCorner th:not(:last-child),
 .tableRoundedCorner th:not(:last-child),
 .tableRoundedCorner td:not(:last-child) {
-  border-right: 1px solid black;
+  border-right: 1px solid rgb(255, 255, 255);
+}
+
+.tableRoundedCorner td {
+  padding: 5px;
 }
 
 /* Apply a border to the bottom of all but the last row */
@@ -54,7 +63,7 @@ code {
 .tableRoundedCorner > thead:not(:last-child),
 .tableRoundedCorner > tbody:not(:last-child),
 .tableRoundedCorner > tfoot:not(:last-child) {
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid rgb(255, 255, 255);
 }
 
 .viewCardsCascade {
@@ -94,6 +103,8 @@ h4 {
 }
 
 .viewCardTotal {
+  display: flex;
+  align-items: center;
   font-weight: bolder;
   margin: 0px 0px 10px 0px;
 }
@@ -106,6 +117,13 @@ h4 {
   cursor: pointer;
 }
 
+.buttonWhite {
+  border: 0px;
+  padding: 5px;
+  background-color: rgb(250, 250, 250);
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+}
 .viewCardRow {
   display: flex;
   flex-direction: row;
@@ -131,10 +149,4 @@ h4 {
   flex-direction: column;
   margin: 10px 0px 10px 10px;
   width: 50%;
-}
-
-@media only screen and (max-width: 600px) {
-  .columnNotInNarrowTable {
-    display: none;
-  }
 }
