--- a/src/components/Investments.css
+++ b/src/components/Investments.css
@@ -1,4 +1,5 @@
 .investmentsTable {
+  border-collapse: collapse;
   background-color: white;
   border-radius: 10px;
   padding: 10px;
@@ -7,12 +8,17 @@
 
 .investmentsTable > thead > tr > td {
   font-weight: 600;
-  padding: 0px 15px 7px 0px;
+  /* padding: 0px 15px 7px 0px; */
   border-bottom: 1px dashed rgb(189, 183, 183);
 }
 .investmentsTable > tbody > tr > td {
-  padding: 4px 15px 4px 0px;
+  /* padding: 4px 15px 4px 0px; */
   vertical-align: top;
+}
+.investmentsTable > tbody > tr:hover {
+  background-color: rgb(17, 81, 218);
+  color: white;
+  cursor: pointer;
 }
 
 .investmentsTable > tbody {
@@ -21,14 +27,7 @@
 }
 
 tbody:hover:not(:first-child) tr td {
-  border-radius: 10px;
-}
-
-.addStockButton {
-  background-color: white;
-  color: black;
-  margin: 0px 0px 0px 10px;
-  border-radius: 10px;
+  /* border-radius: 10px; */
 }
 
 .columnInWideView {
