--- a/src/parentstyles.css
+++ b/src/parentstyles.css
@@ -117,6 +117,13 @@ h4 {
   cursor: pointer;
 }
 
+.buttonAddNewEntry {
+  background-color: white;
+  color: black;
+  margin: 0px 0px 0px 10px;
+  border-radius: 10px;
+}
+
 .buttonWhite {
   border: 0px;
   padding: 5px;
