--- a/src/parentstyles.css
+++ b/src/parentstyles.css
@@ -28,44 +28,6 @@ code {
   color: rgb(26, 24, 21);
 }
 
-.tableRoundedCorner {
-  border-spacing: 0;
-  border-collapse: separate;
-  border-radius: 10px;
-  border: 1px solid rgb(255, 255, 255);
-}
-
-.tableRoundedCorner thead {
-  color: white;
-  background-color: #087fed;
-}
-
-/* Apply a border to the right of all but the last column */
-.tableRoundedCorner th:not(:last-child),
-.tableRoundedCorner th:not(:last-child),
-.tableRoundedCorner td:not(:last-child) {
-  border-right: 1px solid rgb(255, 255, 255);
-}
-
-.tableRoundedCorner td {
-  padding: 5px;
-}
-
-/* Apply a border to the bottom of all but the last row */
-.tableRoundedCorner > thead > tr:not(:last-child) > th,
-.tableRoundedCorner > thead > tr:not(:last-child) > td,
-.tableRoundedCorner > tbody > tr:not(:last-child) > th,
-.tableRoundedCorner > tbody > tr:not(:last-child) > td,
-.tableRoundedCorner > tfoot > tr:not(:last-child) > th,
-.tableRoundedCorner > tfoot > tr:not(:last-child) > td,
-.tableRoundedCorner > tr:not(:last-child) > td,
-.tableRoundedCorner > tr:not(:last-child) > th,
-.tableRoundedCorner > thead:not(:last-child),
-.tableRoundedCorner > tbody:not(:last-child),
-.tableRoundedCorner > tfoot:not(:last-child) {
-  border-bottom: 1px solid rgb(255, 255, 255);
-}
-
 .viewCardsCascade {
   display: flex;
   flex-direction: row;
@@ -75,14 +37,15 @@ code {
 
 .viewCard {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-content: flex-start;
   background-color: #087fed;
   border-radius: 10px;
   padding: 10px;
   margin: 20px;
   min-width: 350px;
-  max-width: 500px;
 }
 
 .viewCardHeaderRow {
@@ -109,6 +72,33 @@ h4 {
   margin: 0px 0px 10px 0px;
 }
 
+.viewCardRow {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  background-color: #f0ebeb;
+  border: 1px solid #fff;
+  border-radius: 10px;
+  margin: 0px 10px 5px 10px;
+  padding: 3px;
+  min-width: 350px;
+}
+
+.viewCardRowLeftBox {
+  display: flex;
+  flex-direction: column;
+  margin: 10px 0px 10px 10px;
+  /* width: 50%; */
+}
+
+.viewCardRowRightBox {
+  display: flex;
+  flex-direction: column;
+  margin: 10px 0px 10px 10px;
+  /* width: 50%; */
+}
+
 .buttonPrimary {
   border: 0px;
   padding: 5px;
@@ -130,30 +120,4 @@ h4 {
   background-color: rgb(250, 250, 250);
   color: rgb(0, 0, 0);
   cursor: pointer;
-}
-.viewCardRow {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  background-color: #f0ebeb;
-  border: 1px solid #fff;
-  border-radius: 10px;
-  margin: 0px 10px 5px 10px;
-  padding: 3px;
-  width: 100%;
-}
-
-.viewCardRowLeftBox {
-  display: flex;
-  flex-direction: column;
-  margin: 10px 0px 10px 10px;
-  width: 50%;
-}
-
-.viewCardRowRightBox {
-  display: flex;
-  flex-direction: column;
-  margin: 10px 0px 10px 10px;
-  width: 50%;
 }
