--- a/src/components/OptionsBoard.css
+++ b/src/components/OptionsBoard.css
@@ -1,3 +1,35 @@
 .optionsBoard {
-  background-color: black;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  min-height: 30px;
+  padding: 10px;
+  background-color: rgb(29 33 37);
+  color: white;
+}
+
+.wealthSummary {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  min-width: 300px;
+  gap: 30px;
+}
+
+.item-enter {
+  opacity: 0;
+}
+.item-enter-active {
+  opacity: 1;
+  transition: opacity 1000ms ease-in;
+}
+.item-exit {
+  opacity: 1;
+}
+.item-exit-active {
+  opacity: 0;
+  transition: opacity 1000ms ease-in;
 }
