--- a/src/components/CashAccounts.css
+++ b/src/components/CashAccounts.css
@@ -31,7 +31,8 @@
 .editValueIcon {
   height: 11px;
   width: 11px;
-  margin: 0px 0px 0px 3px;
+  margin: 0px 3px 0px 3px;
+  opacity: 0;
 }
 
 .currentValueText {
@@ -51,7 +52,9 @@
   overflow: hidden;
   height: 200px;
   width: 100%;
-  color: white;
+  background-color: #f0ebeb;
+  border-radius: 10px;
+  padding: 10px;
 }
 
 .cashAccountsTableHeader {
@@ -71,11 +74,11 @@
 .cashAccountsTableDataGridRow {
   padding-bottom: 3px;
   padding-top: 3px;
-  border-bottom: 1px dashed rgb(35, 35, 35);
+  border-bottom: 1px dashed rgb(54, 52, 52);
 }
 
 .cashAccountsTableDataGridRow:hover {
-  background-color: #555;
+  background-color: #cbcdd3;
   cursor: pointer;
 }
 
