--- a/src/parentstyles.css
+++ b/src/parentstyles.css
@@ -31,14 +31,16 @@ code {
 
 .newAdditionModal {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
+  padding-top: 20%;
   width: 100vw;
   height: 100vh;
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba(9, 36, 238, 0.781);
+  background-color: rgba(0, 0, 0, 0.78);
 }
 
 .newAdditionModalInner {
@@ -57,8 +59,7 @@ code {
 
 .viewCard {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: flex-start;
   align-content: flex-start;
   background-color: #087fed;
@@ -66,7 +67,6 @@ code {
   padding: 10px;
   margin: 20px;
   min-width: 350px;
-  max-width: 760px;
 }
 
 .viewCardHeaderRow {
