--- a/src/components/OptionsBoard.css
+++ b/src/components/OptionsBoard.css
@@ -1,14 +1,26 @@
+.currencySelectElement {
+  background: white;
+  padding: 4px;
+  border-radius: 7px;
+  border-width: medium;
+  border-color: rgb(75, 166, 246);
+  margin: 0px 0px 0px 0px;
+}
+
 .optionsBoard {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-evenly;
   align-items: center;
-  width: 100%;
   min-height: 30px;
   padding: 10px;
   background-color: rgb(29 33 37);
   color: white;
+}
+
+.optionsBoardNegative {
+  color: red;
 }
 
 .wealthSummary {
