--- a/src/parentstyles.css
+++ b/src/parentstyles.css
@@ -34,7 +34,7 @@ code {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  padding-top: 20%;
+  padding-top: 120px;
   width: 100vw;
   height: 100vh;
   position: fixed;
@@ -55,6 +55,7 @@ code {
   flex-direction: row;
   flex-wrap: wrap;
   gap: 10px;
+  margin: 10px;
 }
 
 .viewCard {
@@ -65,15 +66,14 @@ code {
   background-color: #087fed;
   border-radius: 10px;
   padding: 10px;
-  margin: 20px;
-  min-width: 350px;
+  border: 1px solid #949494;
 }
 
 .viewCardHeaderRow {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 100%;
+
   margin-left: 5px;
 }
 
@@ -103,7 +103,7 @@ h4 {
   border-radius: 10px;
   margin: 0px 10px 5px 10px;
   padding: 3px;
-  min-width: 350px;
+  min-width: 390px;
 }
 
 .viewCardRowLeftBox {
