readying for deployment

--- a/src/components/CashAccounts.css
+++ b/src/components/CashAccounts.css
@@ -51,7 +51,6 @@
   flex-direction: column;
   overflow: hidden;
   height: 200px;
-
   background-color: #f0ebeb;
   border-radius: 10px;
   padding: 10px;
@@ -75,32 +74,12 @@
 .cashAccountsTableDataGridRow {
   padding-bottom: 3px;
   padding-top: 3px;
-  border-bottom: 1px dashed rgb(54, 52, 52);
+  border-bottom: 1px solid rgb(8 127 237);
 }
 
 .cashAccountsTableDataGridRow:hover {
   background-color: #cbcdd3;
   cursor: pointer;
-}
-
-/* width */
-.cashAccountsTableData::-webkit-scrollbar {
-  width: 10px;
-}
-
-/* Track */
-.cashAccountsTableData::-webkit-scrollbar-track {
-  background: #f1f1f1;
-}
-
-/* Handle */
-.cashAccountsTableData::-webkit-scrollbar-thumb {
-  background: #888;
-}
-
-/* Handle on hover */
-.cashAccountsTableData::-webkit-scrollbar-thumb:hover {
-  background: #555;
 }
 
 .cashAccountsTable > div.table-header {
@@ -109,4 +88,10 @@
 
 .cashAccountsTable > div {
   border-bottom: 1px solid black;
+}
+
+@media only screen and (max-width: 800px) {
+  .cashAccountsTable {
+    min-width: 322px;
+  }
 }
