--- a/src/components/Properties.css
+++ b/src/components/Properties.css
@@ -6,6 +6,11 @@
   padding-bottom: 5px;
 }
 
+.propertiesOflowContainer {
+  overflow: auto;
+  max-height: 300px;
+}
+
 .underNetTexts {
   font-weight: unset;
   margin-top: 0px;
@@ -43,4 +48,10 @@
   font-weight: unset;
   margin-top: 2px;
   font-size: 0.8rem;
+}
+
+@media only screen and (max-width: 800px) {
+  .propertiesViewCardRow {
+    min-width: 297px;
+  }
 }
