--- a/src/components/CardSpinner.css
+++ b/src/components/CardSpinner.css
@@ -3,12 +3,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  align-self: center;
   padding: 20px;
   color: white;
 }
 
 .spinnerText {
-  width: 350px;
   text-align: center;
 }
 .spinIcon {
