--- a/src/components/FXRates.css
+++ b/src/components/FXRates.css
@@ -3,10 +3,10 @@
   flex-direction: column;
   overflow: hidden;
   height: 200px;
-
   background-color: #f0ebeb;
   border-radius: 10px;
   padding: 10px;
+  min-width: 321px;
 }
 
 .FXRatesTableHeader {
@@ -26,7 +26,7 @@
 .FXRatesTableDataGridRow {
   padding-bottom: 3px;
   padding-top: 3px;
-  border-bottom: 1px dashed rgb(54, 52, 52);
+  border-bottom: 1px solid rgb(8 127 237);
   font-size: 0.9rem;
 }
 
