--- a/src/components/Investments.css
+++ b/src/components/Investments.css
@@ -26,7 +26,7 @@
 .investmentsTableDataGridRow {
   padding-bottom: 3px;
   padding-top: 3px;
-  border-bottom: 1px dashed rgb(54, 52, 52);
+  border-bottom: 1px solid rgb(8 127 237);
 }
 
 .investmentsTableDataGridRow:hover {
@@ -68,7 +68,7 @@
 
 @media only screen and (max-width: 900px) {
   .investmentsTable {
-    width: 350px;
+    width: 320px;
   }
   .investmentsTableHeader,
   .investmentsTableDataGridRow {
