--- a/src/parentstyles.css
+++ b/src/parentstyles.css
@@ -49,6 +49,7 @@ code {
 
 .newAdditionModalInner {
   display: flex;
+  flex-direction: column;
   justify-self: center;
   align-self: center;
   max-width: 350px;
@@ -145,4 +146,39 @@ h4 {
   background-color: rgb(250, 250, 250);
   color: rgb(0, 0, 0);
   cursor: pointer;
+}
+
+.buttonRed {
+  border: 0px;
+  padding: 5px;
+  background-color: rgb(218, 30, 30);
+  color: white;
+  cursor: pointer;
+}
+
+/* width */
+.scrollbarstyles::-webkit-scrollbar {
+  width: 2px;
+}
+
+/* Track */
+.scrollbarstyles::-webkit-scrollbar-track {
+  background: #f0ebeb;
+}
+
+/* Handle */
+.scrollbarstyles::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+.scrollbarstyles::-webkit-scrollbar-thumb:hover {
+  background: #555;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 770px) {
+  .viewCardsCascade {
+    justify-content: center;
+  }
 }
